[tool.poetry]
name = "adventofcode-2023"
version = "0.1.0"
description = "Solutions for the Advent of Code 2023"
authors = ["keneanung"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
