[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Solutions for the Advent of Code 2023"
authors = ["keneanung"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.41"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]